<resources>
    <string name="app_name">BAT</string>
    <string name="welcome">WELCOME</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_have_an_account_signin">Not have an account? SignIn</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone Number</string>
    <string name="welcome_user">WELCOME USER</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="reports">Reports</string>
    <string name="logout">Logout</string>
    <string name="capture_image">Capture Image</string>
    <string name="categories">Categories</string>
</resources>