<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"/>

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:title="@string/history"
        android:id="@+id/menuHistory"
        android:icon="@drawable/ic_baseline_assignment_24"/>

    <item
        android:id="@+id/menuReports"
        android:icon="@drawable/ic_baseline_assessment_24"
        android:title="@string/reports"/>

    <item
        android:id="@+id/menuLogout"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/logout"/>


</menu>