<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navi"
    android:label="@string/home"
    app:startDestination="@id/menuHome">

    <activity
        android:id="@+id/menuProfile"
        android:name="com.example.bat.Profile"
        android:label="@string/profile"
        tools:layout="@layout/activity_profile" />

    <activity
        android:id="@+id/menuHome"
        android:name="com.example.bat.HomePage"
        android:label="@string/home"
        tools:layout="@layout/activity_home_page" />

    <activity
        android:id="@+id/menuHistory"
        android:name="com.example.bat.category_page"
        android:label="@string/history"
        tools:layout="@layout/category_page" />

    <activity
        android:id="@+id/menuReports"
        android:name="com.example.bat.Reports"
        android:label="@string/reports"
        tools:layout="@layout/activity_reports" />
    <action
        android:id="@+id/action_global_menuHome"
        app:destination="@id/menuHome"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />

</navigation>