<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50sp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/welcome"
        android:background="#30ffffff"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints="name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:background="#30ffffff"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign"
        android:layout_below="@id/password"
        android:text="@string/not_have_an_account_signin"
        android:textColor="@color/white"
        android:layout_alignEnd="@id/password"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_below="@id/sign"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotpassword"
        android:layout_below="@id/login"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

</RelativeLayout>