<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createaccnt"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="40sp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_below="@id/createaccnt"
        android:background="#30ffffff"
        android:hint="@string/name"
        android:inputType="text"
        android:autofillHints="name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mail"
        android:layout_below="@id/name"
        android:background="#30ffffff"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass"
        android:layout_below="@id/mail"
        android:background="#30ffffff"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cnfpass"
        android:layout_below="@id/pass"
        android:background="#30ffffff"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:layout_below="@id/cnfpass"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

</RelativeLayout>