<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/layoutToolBar"
            android:layout_height="?actionBarSize"
            android:background="@color/mainheader"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            app:layout_constraintTop_toTopOf = "parent"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imgmenu"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_menu_24"
                app:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/welcome_user"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/capimg"
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_below="@+id/layoutToolBar"
            android:contentDescription="@string/capture_image"
            android:src="@drawable/camimg" />

        <Button
            android:id="@+id/upbtn"
            android:layout_width="356dp"
            android:layout_height="80dp"
            android:layout_below="@+id/capimg"
            android:layout_marginTop="18dp"
            android:layout_centerHorizontal="true"
            android:text="Upload doc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:textSize="20sp"
            android:id="@+id/img_text"
            android:textColor="@color/teal_200"
            android:text="hiii"
            android:padding="10dp"
            android:layout_below="@+id/upbtn"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:id="@+id/naviview"
        android:layout_gravity="start"

        />

</androidx.drawerlayout.widget.DrawerLayout>